    And remove thenRun/CallWithSerialExecutor...

2*, Rename asyncExecutor() to async() in SQLExecutor/DynamoDBExecutor/MongoDBExecutor/..., 
    Rename executor() to sync() in AsyncSQLExeuctor/AsyncDynamoDBExecutor/AsyncMongoDBExecutor

3, Add map/stream to Joiner

4, Improvements and bug fix.



========Changes in 0.9.68=========================================================================

1, Add map/mapToObj to IntList/LongList/DoubleList/.../IntMatrix/LongMatrix/Double/Matrix

2, Add median to IntTriple/LongTriple/FloatTriple/DoubleTriple

3*, Remove parameterized constructors from Pair/Triple/Tuple/Output/MutableInt/Indexed/IndexedInt/...

4, Add boxed to OptionalInt/OptionalDouble/...

5*, Change the parameter order of CSVUtil.loadCSV(Map<String, ? extends Type> columnTypeMap ...) and CSVUtil.loadCSV(List<? extends Type> columnTypeList ...)

6*, Change the parameter order of JdbcUtil.importData(...final Map<String, ? extends Type> columnTypeMap final int batchSize, final int batchInterval)

7*, Remove parse(iter..) and parse(iters...) from IOUtil/JdbcUtil, replaced by the methods in N.

8*, Refactoring LongStream/Stream.interval(...)

9*, Refactoring Try.Predicate/Function/Consumer/...

10*, Remove ExList

11*, Refatoring to reduce the size of abacus-android-*.jar.

12, Improvements and bug fix.


========Changes in 0.9.67=========================================================================

1, Add collectAndThen to Stream and Seq

2, Rename SQLExecutor.ExMapper to Mapper.

3, Refactoring IndexedPredicate/IndexedFunction/IndexedConsumer/...

4, Add slice(fromIndex, toIndex) to ExList

5, Rename indexed to _indexed in Fn and last to _last, dominators to _dominators in Collectors.
   All the Function/Predicate/Collector... which can only be used in sequential stream start with _. 

6, Add toImmutableList/toImmutableSet/toImmutableMap to Collectors

7, Improvements and bug fix.

