@@ -1,0 +1,585 @@
+package com.landawn.abacus.util.stream;
+
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
+
+import com.landawn.abacus.util.Fn;
+import com.landawn.abacus.util.Multimap;
+import com.landawn.abacus.util.Pair;
+import com.landawn.abacus.util.function.BinaryOperator;
+import com.landawn.abacus.util.function.Function;
+import com.landawn.abacus.util.function.Predicate;
+import com.landawn.abacus.util.function.Supplier;
+
+public final class EntryStream<K, V> {
+    private final Stream<Map.Entry<K, V>> s;
+
+    EntryStream(Stream<Map.Entry<K, V>> s) {
+        this.s = s;
+    }
+
+    public static <K, V> EntryStream<K, V> of(Stream<Map.Entry<K, V>> s) {
+        return new EntryStream<K, V>(s);
+    }
+
+    public static <K, V> EntryStream<K, V> of(Map<K, V> map) {
+        return new EntryStream<K, V>(Stream.of(map));
+    }
+
+    public static <K, V> EntryStream<K, V> of(Collection<? extends Map.Entry<K, V>> entries) {
+        return new EntryStream<K, V>(Stream.of(entries));
+    }
+
+    public static <K, V> EntryStream<K, V> of(Map.Entry<K, V>... entries) {
+        return new EntryStream<K, V>(Stream.of(entries));
+    }
+
+    public Stream<K> keys() {
+        final Function<Map.Entry<K, V>, K> func = Fn.key();
+
+        return s.map(func);
+    }
+
+    public Stream<V> values() {
+        final Function<Map.Entry<K, V>, V> func = Fn.value();
+
+        return s.map(func);
+    }
+
+    public Stream<Map.Entry<K, V>> entries() {
+        return s;
+    }
+
+    public EntryStream<V, K> inversed() {
+        final Function<Map.Entry<K, V>, Map.Entry<V, K>> mapper = new Function<Map.Entry<K, V>, Map.Entry<V, K>>() {
+            @Override
+            public Entry<V, K> apply(Entry<K, V> e) {
+                return Pair.of(e.getValue(), e.getKey());
+            }
+        };
+
+        return map(mapper);
+    }
+
+    public <KK> EntryStream<K, V> filter(final Predicate<Map.Entry<K, V>> predicate) {
+        return of(s.filter(predicate));
+    }
+
+    public <KK> EntryStream<K, V> filterByKey(final Predicate<? super K> predicate) {
+        final Predicate<Map.Entry<K, V>> predicate2 = Fn.testByKey(predicate);
+
+        return of(s.filter(predicate2));
+    }
+
+    public <KK> EntryStream<K, V> filterByValue(final Predicate<? super V> predicate) {
+        final Predicate<Map.Entry<K, V>> predicate2 = Fn.testByValue(predicate);
+
+        return of(s.filter(predicate2));
+    }
+
+    public <KK, VV> EntryStream<KK, VV> map(final Function<? super Map.Entry<K, V>, Map.Entry<KK, VV>> mapper) {
+        return of(s.map(mapper));
+    }
+
+    public <KK, VV> EntryStream<KK, VV> map(final Function<? super K, KK> keyMapper, final Function<? super V, VV> valueMapper) {
+        final Function<Map.Entry<K, V>, Map.Entry<KK, VV>> mapper = new Function<Map.Entry<K, V>, Map.Entry<KK, VV>>() {
+            @Override
+            public Entry<KK, VV> apply(Entry<K, V> t) {
+                return Pair.of(keyMapper.apply(t.getKey()), valueMapper.apply(t.getValue()));
+            }
+        };
+
+        return map(mapper);
+    }
+
+    public <KK> EntryStream<KK, V> mapKey(final Function<? super K, KK> mapper) {
+        final Function<Map.Entry<K, V>, Map.Entry<KK, V>> func = Fn.mapKey(mapper);
+
+        return of(s.map(func));
+    }
+
+    public <VV> EntryStream<K, VV> mapValue(final Function<? super V, VV> mapper) {
+        final Function<Map.Entry<K, V>, Map.Entry<K, VV>> func = Fn.mapValue(mapper);
+
+        return of(s.map(func));
+    }
+
+    public <KK, VV> EntryStream<KK, VV> flatMap(final Function<? super Map.Entry<K, V>, EntryStream<KK, VV>> mapper) {
+        final Function<Map.Entry<K, V>, Stream<Map.Entry<KK, VV>>> mapper2 = new Function<Map.Entry<K, V>, Stream<Map.Entry<KK, VV>>>() {
+            @Override
+            public Stream<Entry<KK, VV>> apply(Entry<K, V> t) {
+                return mapper.apply(t).s;
+            }
+        };
+
+        return flatMap2(mapper2);
+    }
+
+    public <KK, VV> EntryStream<KK, VV> flatMap2(final Function<? super Map.Entry<K, V>, Stream<Map.Entry<KK, VV>>> mapper) {
+        return of(s.flatMap(mapper));
+    }
+
+    public <KK, VV> EntryStream<KK, VV> flatMap3(final Function<? super Map.Entry<K, V>, Map<KK, VV>> mapper) {
+        final Function<Map.Entry<K, V>, Stream<Map.Entry<KK, VV>>> mapper2 = new Function<Map.Entry<K, V>, Stream<Map.Entry<KK, VV>>>() {
+            @Override
+            public Stream<Entry<KK, VV>> apply(Entry<K, V> t) {
+                return Stream.of(mapper.apply(t));
+            }
+        };
+
+        return flatMap2(mapper2);
+    }
+
+    public <KK> EntryStream<KK, V> flatMapKey(final Function<? super K, Stream<KK>> mapper) {
+        final Function<Map.Entry<K, V>, Stream<Map.Entry<KK, V>>> mapper2 = new Function<Map.Entry<K, V>, Stream<Map.Entry<KK, V>>>() {
+            @Override
+            public Stream<Entry<KK, V>> apply(final Map.Entry<K, V> e) {
+                return mapper.apply(e.getKey()).map(new Function<KK, Map.Entry<KK, V>>() {
+                    @Override
+                    public Map.Entry<KK, V> apply(KK kk) {
+                        return Pair.of(kk, e.getValue());
+                    }
+                });
+            }
+        };
+
+        return flatMap2(mapper2);
+    }
+
+    public <VV> EntryStream<K, VV> flatMapValue(final Function<? super V, Stream<VV>> mapper) {
+        final Function<Map.Entry<K, V>, Stream<Map.Entry<K, VV>>> mapper2 = new Function<Map.Entry<K, V>, Stream<Map.Entry<K, VV>>>() {
+            @Override
+            public Stream<Entry<K, VV>> apply(final Entry<K, V> e) {
+                return mapper.apply(e.getValue()).map(new Function<VV, Map.Entry<K, VV>>() {
+                    @Override
+                    public Map.Entry<K, VV> apply(VV vv) {
+                        return Pair.of(e.getKey(), vv);
+                    }
+                });
+            }
+        };
+
+        return flatMap2(mapper2);
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @return
+     * @see Collectors#groupingBy(Function)
+     */
+    public EntryStream<K, List<V>> groupBy() {
+        return of(toMap2());
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupingBy(Function, Supplier)
+     */
+    public <M extends Map<K, List<V>>> EntryStream<K, List<V>> groupBy(final Supplier<M> mapFactory) {
+        return of(toMap2(mapFactory));
+    }
+
+    public <KK, VV> EntryStream<KK, List<VV>> groupBy(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper) {
+        return of(toMap2(keyExtractor, valueMapper));
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mapFactory
+     * @return
+     * @see Collectors#toMultimap(Function, Function, Supplier)
+     */
+    public <KK, VV, M extends Map<KK, List<VV>>> EntryStream<KK, List<VV>> groupBy(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final Supplier<M> mapFactory) {
+        return of(toMap2(keyExtractor, valueMapper, mapFactory));
+    }
+
+    /**
+     * 
+     * @param downstream
+     * @return
+     * @see Collectors#groupingBy(Function, Collector)
+     */
+    public <A, D> EntryStream<K, D> groupBy(final Collector<? super Map.Entry<K, V>, A, D> downstream) {
+        return of(toMap(downstream));
+    }
+
+    /**
+     * 
+     * @param downstream
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupingBy(Function, Collector)
+     */
+    public <A, D, M extends Map<K, D>> EntryStream<K, D> groupBy(final Collector<? super Map.Entry<K, V>, A, D> downstream, final Supplier<M> mapFactory) {
+        return of(toMap(downstream, mapFactory));
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @param downstream
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupingBy(Function, Collector, Supplier)
+     */
+    public <KK, A, D> EntryStream<KK, D> groupBy(final Function<? super Map.Entry<K, V>, ? extends KK> classifier,
+            final Collector<? super Map.Entry<K, V>, A, D> downstream) {
+        return of(toMap(classifier, downstream));
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @param downstream
+     * @return
+     * @see Collectors#groupingBy(Function, Collector)
+     */
+    public <KK, A, D, M extends Map<KK, D>> EntryStream<KK, D> groupBy(final Function<? super Map.Entry<K, V>, ? extends KK> classifier,
+            final Collector<? super Map.Entry<K, V>, A, D> downstream, final Supplier<M> mapFactory) {
+        return of(toMap(classifier, downstream, mapFactory));
+    }
+
+    /**
+     * 
+     * @return
+     */
+    public EntryStream<K, V> groupBy2() {
+        return of(toMap());
+    }
+
+    /**
+     * 
+     * @param mergeFunction
+     * @return
+     */
+    public EntryStream<K, V> groupBy2(final BinaryOperator<V> mergeFunction) {
+        return of(toMap(mergeFunction));
+    }
+
+    /**
+     * 
+     * @param mapFactory
+     * @return
+     */
+    public <M extends Map<K, V>> EntryStream<K, V> groupBy2(final Supplier<M> mapFactory) {
+        return of(toMap(mapFactory));
+    }
+
+    /**
+     * 
+     * @param mergeFunction
+     * @param mapFactory
+     * @return
+     */
+    public <M extends Map<K, V>> EntryStream<K, V> groupBy2(final BinaryOperator<V> mergeFunction, final Supplier<M> mapFactory) {
+        return of(toMap(mergeFunction, mapFactory));
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @return
+     * @see Collectors#groupBy(Function, Function)
+     */
+    public <KK, VV> EntryStream<KK, VV> groupBy2(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper) {
+        return of(toMap(keyExtractor, valueMapper));
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupBy(Function, Function, Supplier)
+     */
+    public <KK, VV, M extends Map<KK, VV>> EntryStream<KK, VV> groupBy2(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final Supplier<M> mapFactory) {
+        return of(toMap(keyExtractor, valueMapper, mapFactory));
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mergeFunction
+     * @return
+     * @see Collectors#groupBy(Function, Function, BinaryOperator)
+     */
+    public <KK, VV> EntryStream<KK, VV> groupBy2(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final BinaryOperator<VV> mergeFunction) {
+        return of(toMap(keyExtractor, valueMapper, mergeFunction));
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mergeFunction
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupBy(Function, Function, BinaryOperator, Supplier)
+     */
+    public <KK, VV, M extends Map<KK, VV>> EntryStream<KK, VV> groupBy2(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final BinaryOperator<VV> mergeFunction, final Supplier<M> mapFactory) {
+        return of(toMap(keyExtractor, valueMapper, mergeFunction, mapFactory));
+    }
+
+    /**
+     * 
+     * @return
+     */
+    public Map<K, V> toMap() {
+        final Collector<Map.Entry<K, V>, ?, Map<K, V>> collector = Collectors.toMap();
+
+        return s.collect(collector);
+    }
+
+    /**
+     * 
+     * @param mergeFunction
+     * @return
+     */
+    public Map<K, V> toMap(final BinaryOperator<V> mergeFunction) {
+        final Collector<Map.Entry<K, V>, ?, Map<K, V>> collector = Collectors.toMap(mergeFunction);
+
+        return s.collect(collector);
+    }
+
+    /**
+     * 
+     * @param mapFactory
+     * @return
+     */
+    public <M extends Map<K, V>> M toMap(final Supplier<M> mapFactory) {
+        final Collector<Map.Entry<K, V>, ?, M> collector = Collectors.toMap(mapFactory);
+
+        return s.collect(collector);
+    }
+
+    /**
+     * 
+     * @param mergeFunction
+     * @param mapFactory
+     * @return
+     */
+    public <M extends Map<K, V>> M toMap(final BinaryOperator<V> mergeFunction, final Supplier<M> mapFactory) {
+        final Function<Map.Entry<K, V>, K> keyExtractor = Fn.key();
+        final Function<Map.Entry<K, V>, V> valueMapper = Fn.value();
+
+        final Collector<Entry<K, V>, ?, M> collector = Collectors.toMap(keyExtractor, valueMapper, mergeFunction, mapFactory);
+
+        return s.collect(collector);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @return
+     * @see Collectors#toMap(Function, Function)
+     */
+    public <KK, VV> Map<KK, VV> toMap(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper) {
+        return s.toMap(keyExtractor, valueMapper);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mapFactory
+     * @return
+     * @see Collectors#toMap(Function, Function, Supplier)
+     */
+    public <KK, VV, M extends Map<KK, VV>> M toMap(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final Supplier<M> mapFactory) {
+        return s.toMap(keyExtractor, valueMapper, mapFactory);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mergeFunction
+     * @return
+     * @see Collectors#toMap(Function, Function, BinaryOperator)
+     */
+    public <KK, VV> Map<KK, VV> toMap(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final BinaryOperator<VV> mergeFunction) {
+        return s.toMap(keyExtractor, valueMapper, mergeFunction);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mergeFunction
+     * @param mapFactory
+     * @return
+     * @see Collectors#toMap(Function, Function, BinaryOperator, Supplier)
+     */
+    public <KK, VV, M extends Map<KK, VV>> M toMap(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final BinaryOperator<VV> mergeFunction, final Supplier<M> mapFactory) {
+        return s.toMap(keyExtractor, valueMapper, mergeFunction, mapFactory);
+    }
+
+    /**
+     * 
+     * @param downstream
+     * @return
+     * @see Collectors#groupingBy(Function, Collector)
+     */
+    public <A, D> Map<K, D> toMap(final Collector<? super Map.Entry<K, V>, A, D> downstream) {
+        final Function<Map.Entry<K, V>, K> keyExtractor = Fn.key();
+        return s.toMap(keyExtractor, downstream);
+    }
+
+    /**
+     * 
+     * @param downstream
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupingBy(Function, Collector)
+     */
+    public <A, D, M extends Map<K, D>> M toMap(final Collector<? super Map.Entry<K, V>, A, D> downstream, final Supplier<M> mapFactory) {
+        final Function<Map.Entry<K, V>, K> keyExtractor = Fn.key();
+
+        return s.toMap(keyExtractor, downstream, mapFactory);
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @param downstream
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupingBy(Function, Collector, Supplier)
+     */
+    public <KK, A, D> Map<KK, D> toMap(final Function<? super Map.Entry<K, V>, ? extends KK> classifier,
+            final Collector<? super Map.Entry<K, V>, A, D> downstream) {
+        return s.toMap(classifier, downstream);
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @param downstream
+     * @return
+     * @see Collectors#groupingBy(Function, Collector)
+     */
+    public <KK, A, D, M extends Map<KK, D>> M toMap(final Function<? super Map.Entry<K, V>, ? extends KK> classifier,
+            final Collector<? super Map.Entry<K, V>, A, D> downstream, final Supplier<M> mapFactory) {
+        return s.toMap(classifier, downstream, mapFactory);
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @return
+     * @see Collectors#groupingBy(Function)
+     */
+    public Map<K, List<V>> toMap2() {
+        final Collector<Map.Entry<K, V>, ?, Map<K, List<V>>> collector = Collectors.toMap2();
+
+        return s.collect(collector);
+    }
+
+    /**
+     * 
+     * @param classifier
+     * @param mapFactory
+     * @return
+     * @see Collectors#groupingBy(Function, Supplier)
+     */
+    public <M extends Map<K, List<V>>> M toMap2(final Supplier<M> mapFactory) {
+        final Function<Map.Entry<K, V>, K> keyExtractor = Fn.key();
+        final Function<Map.Entry<K, V>, V> valueMapper = Fn.value();
+
+        return s.toMap2(keyExtractor, valueMapper, mapFactory);
+    }
+
+    public <KK, VV> Map<KK, List<VV>> toMap2(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper) {
+        return s.toMap2(keyExtractor, valueMapper);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mapFactory
+     * @return
+     * @see Collectors#toMultimap(Function, Function, Supplier)
+     */
+    public <KK, VV, M extends Map<KK, List<VV>>> M toMap2(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final Supplier<M> mapFactory) {
+
+        return s.toMap2(keyExtractor, valueMapper, mapFactory);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @return
+     * @see Collectors#toMultimap(Function, Function)
+     */
+    public Multimap<K, V, List<V>> toMultimap() {
+        final Function<Map.Entry<K, V>, K> keyExtractor = Fn.key();
+        final Function<Map.Entry<K, V>, V> valueMapper = Fn.value();
+
+        return s.toMultimap(keyExtractor, valueMapper);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param mapFactory
+     * @return
+     * @see Collectors#toMultimap(Function, Function, Supplier)
+     */
+    public <C extends Collection<V>> Multimap<K, V, C> toMultimap(final Supplier<Multimap<K, V, C>> mapFactory) {
+        final Function<Map.Entry<K, V>, K> keyExtractor = Fn.key();
+        final Function<Map.Entry<K, V>, V> valueMapper = Fn.value();
+
+        return s.toMultimap(keyExtractor, valueMapper, mapFactory);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @return
+     * @see Collectors#toMultimap(Function, Function)
+     */
+    public <KK, VV> Multimap<KK, VV, List<VV>> toMultimap(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper) {
+        return s.toMultimap(keyExtractor, valueMapper);
+    }
+
+    /**
+     * 
+     * @param keyExtractor
+     * @param valueMapper
+     * @param mapFactory
+     * @return
+     * @see Collectors#toMultimap(Function, Function, Supplier)
+     */
+    public <KK, VV, C extends Collection<VV>> Multimap<KK, VV, C> toMultimap(final Function<? super Map.Entry<K, V>, ? extends KK> keyExtractor,
+            final Function<? super Map.Entry<K, V>, ? extends VV> valueMapper, final Supplier<Multimap<KK, VV, C>> mapFactory) {
+        return s.toMultimap(keyExtractor, valueMapper, mapFactory);
+    }
+
+}
